# qtquickcontrols-nemo

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt
examples/sizeview/: CMakeLists.txt  glacier6-sizeview.qml
src/controls/: CMakeLists.txt  qquickfilteringmousearea.cpp  qquicknemocontrolsextensionplugin.cpp  qquicknemocontrolsextensionplugin.h
src/controls/qml/: qmldir
src/models/: CMakeLists.txt  plugin.cpp
src/styles/: CMakeLists.txt
